--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build Angular
-        run: npm run build -- --configuration production --base-href /REPO_NAME/
+        run: npm run build -- --configuration production --base-href /Router-Outlet-Playground/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
