refactor: Update .gitignore
Adds common Angular build artifacts, IDE configurations, and OS-specific files to .gitignore. This ensures these files are not accidentally committed to version control.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,31 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
 
-node_modules
-dist
-dist-ssr
-*.local
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# IDEs and Editors
+.idea/
+.project
+.classpath
+.cproject
+.settings/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Angular
+.angular/
+.angular/cache/
+
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Environment variables
+.env
